# sentinel

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
src/: main.rs
