cargo-features = ["profile-rustflags"]

[package]
name = "sentinel"
version = "0.1.3"
edition = "2021"
authors = ["hardglitch"]

[dependencies]
configparser = "3.1"
walkdir = "2.5"

[profile.dev]
rustflags = ["-Zprint-type-sizes"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
rustflags = ["-C", "target-cpu=native"]